[project]
name = "proj-final-mo824"
version = "0.1.0"
description = ""
authors = [
    {name = "Eliel",email = "e295745@dac.unicamp.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "gurobipy (>=12.0.3,<13.0.0)",
    "black (>=25.9.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
